fix text alignment on antd list items

--- a/src/client/components/TwoPanel/TwoPanel.scss
+++ b/src/client/components/TwoPanel/TwoPanel.scss
@@ -14,6 +14,9 @@ $backgroundColor: #f8ffffd0;
 
     &--text-end {
       text-align: end;
+      & li {
+        justify-content: end !important;
+      }
     }
   }
 }
